--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ window.onresize = function(){
 		}
 	},300); 
 }
-new Box(undefined, undefined, "title").show();
+a=new Box(undefined, undefined, "title", "name:<input value='123456'/>").show();
 
 $("img:eq(0)").click(function (){
 	layx.open({
