--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
 		<meta charset="UTF-8" />
 		<meta content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
 		<title>五子棋</title>
-		<link href="./css/title.css" rel="stylesheet" type="text/css" />
-		<link href="./css/button.css" rel="stylesheet" type="text/css" />
-		<link href="./css/clear.css" rel="stylesheet" type="text/css" />
+		<link href="./css/kt-title.css" rel="stylesheet" type="text/css" />
+		<link href="./css/hwkt-button.css" rel="stylesheet" type="text/css" />
+		<!-- <link href="./css/clear.css" rel="stylesheet" type="text/css" /> -->
 		
 		<link href="./LayX/layx.min.css" rel="stylesheet" type="text/css" />
 		<script src="./LayX/layx.min.js" type="text/javascript"></script>
 		
-		<script src="./js/jq.js"></script>
+		<script src="./js/jq.js" type="text/javascript"></script>
 		<script>
 		window.$ = window.jQuery = require("./js/jq");
 		</script>
 		
-		<script src="./js/choice.js"></script>
-		<script src="./js/box.js"></script>
+		<script src="./js/choice.js" type="text/javascript"></script>
 		
+		<script src="./Box/box.js" type="text/javascript"></script>
+		<link href="./Box/box.css" rel="stylesheet" type="text/css" />
+		<link href="./css/3d.css" rel="stylesheet" type="text/css" />
+		
+		<script src="./BubbleHoverButton/BubbleHoverButton.js" type="text/javascript"></script>
+		<link href="./BubbleHoverButton/BubbleHoverButton.css" rel="stylesheet" type="text/css" />
 		<!--
 		<script src="//cdn.jsdelivr.net/npm/eruda"></script>
 		<script>
@@ -35,7 +40,7 @@ body{
 h1{
 	font-size: 400%;
 }
-button{
+div>a>span{
 	font-size: 115%;
 }
 img{
@@ -57,7 +62,7 @@ img:nth-child(3){
 	h1{
 		font-size: 500%;
 	}
-	button{
+	div>a>span{
 		font-size: 200%;
 	}
 	img{
@@ -77,7 +82,7 @@ img:nth-child(3){
 	h1{
 		font-size: 600%;
 	}
-	button{
+	div>a>span{
 		font-size: 260%;
 	}
 	img{
@@ -111,12 +116,12 @@ body{
 h1{
 	margin: 0px;
 }
-body>button{
-	width: 50%;
-	height: 12%;
+div>a>span{
+	/* width: 100%; */
+	/* height: 100%; */
 	color: white;
-	background-color: #6a8;
-	border: 2px solid #8a8;
+	/* background-color: #6a8; */
+	/* border: 2px solid #8a8; */
 	border-radius: 50px;
 	
 	text-align: center;
@@ -148,8 +153,40 @@ window.onresize = function(){
 			<img src="./image/icon/share.jpg" alt="share" />
 		</div>
 		
-		<h1 id="h1">五子棋</h1>
-		<button
+		<h1 id="h1" class="ThreeD kt">五子棋</h1>
+		<div class="button_su">
+			<span class="su_button_circle"></span>
+			<a href="javascript:location.href='./two.html';" title="点击进入双人对战" class="button_su_inner">
+				<span class="button_text_container hwkt">
+					双人对战
+				</span>
+			</a>
+		</div>
+		<div class="button_su">
+			<span class="su_button_circle"></span>
+			<a href="javascript:location.href='./one1.html';" title="点击进入人机对战（算法1）" class="button_su_inner">
+				<span class="button_text_container hwkt">
+					人机对战（简单）
+				</span>
+			</a>
+		</div>
+		<div class="button_su">
+			<span class="su_button_circle"></span>
+			<a href="javascript:location.href='./one2.html';" title="点击进入人机对战（算法2）" class="button_su_inner">
+				<span class="button_text_container hwkt">
+					人机对战（中级）
+				</span>
+			</a>
+		</div>
+		<div class="button_su">
+			<span class="su_button_circle"></span>
+			<a href="javascript:location.href='./sign.html';" title="点击进入联机对战" class="button_su_inner">
+				<span class="button_text_container hwkt">
+					登录/联机
+				</span>
+			</a>
+		</div>
+		<!-- <button
 			onclick="location.href='./two.html';"
 			title="点击进入双人对战">
 			双人对战
@@ -166,9 +203,9 @@ window.onresize = function(){
 		</button>
 		<button
 			onclick="location.href='./sign.html';"
-			title="登录账号以联机对战">
+			title="点击进入联机对战">
 			登录/联机
-		</button>
+		</button> -->
 		
 		<noscript style="z-index: 1; position: absolute; width: 100%; height: 100px; left: 0px; top: 0px; background-color: #000000; color: #FFFFFF;"><h1>错误！你的浏览器不支持JavaScript，无法运行《五子棋》！</h1></noscript>
 		
@@ -203,7 +240,20 @@ window.onresize = function(){
 	},300); 
 }
 a=new Box(undefined, undefined, "title", "name:<input value='123456'/>", [
-	"ok"
+	{
+		innerHTML:"ok",
+		onclick: function(){
+			alert();
+			a.close();
+		}
+	},"2","3",
+	{
+		innerHTML:"4",
+		"style.width":"50%"
+	},{
+		innerHTML:"5",
+		"style.width":"50%"
+	},
 ]).show();
 
 $("img:eq(0)").click(function (){
