--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<title>五子棋</title>
 		<link href="./css/kt-title.css" rel="stylesheet" type="text/css" />
 		<link href="./css/hwkt-button.css" rel="stylesheet" type="text/css" />
+		<link href="./css/floatButton.css" rel="stylesheet" type="text/css" />
+		<link href="./css/3d.css" rel="stylesheet" type="text/css" />
 		<!-- <link href="./css/clear.css" rel="stylesheet" type="text/css" /> -->
 		
 		<link href="./LayX/layx.min.css" rel="stylesheet" type="text/css" />
@@ -13,17 +15,22 @@
 		
 		<script src="./js/jq.js" type="text/javascript"></script>
 		<script>
-		window.$ = window.jQuery = require("./js/jq");
+		if (require)
+			window.$ = window.jQuery = require("./js/jq");
 		</script>
 		
 		<script src="./js/choice.js" type="text/javascript"></script>
 		
 		<script src="./Box/box.js" type="text/javascript"></script>
 		<link href="./Box/box.css" rel="stylesheet" type="text/css" />
-		<link href="./css/3d.css" rel="stylesheet" type="text/css" />
 		
 		<script src="./BubbleHoverButton/BubbleHoverButton.js" type="text/javascript"></script>
 		<link href="./BubbleHoverButton/BubbleHoverButton.css" rel="stylesheet" type="text/css" />
+		
+		<script src="./js/vconsole.min.js" type="text/javascript"></script>
+		<script type="text/javascript">
+		var vConsole = new VConsole();
+		</script>
 		<!--
 		<script src="//cdn.jsdelivr.net/npm/eruda"></script>
 		<script>
@@ -40,7 +47,7 @@ body{
 h1{
 	font-size: 400%;
 }
-div>a>span{
+a.hwkt.floatButton{
 	font-size: 115%;
 }
 img{
@@ -60,9 +67,9 @@ img:nth-child(3){
 		background-image: url("./image/background2.jpg");
 	}
 	h1{
-		font-size: 500%;
+		font-size: 600%;
 	}
-	div>a>span{
+	a.hwkt.floatButton{
 		font-size: 200%;
 	}
 	img{
@@ -82,7 +89,7 @@ img:nth-child(3){
 	h1{
 		font-size: 600%;
 	}
-	div>a>span{
+	a.hwkt.floatButton{
 		font-size: 260%;
 	}
 	img{
@@ -116,12 +123,13 @@ body{
 h1{
 	margin: 0px;
 }
-div>a>span{
-	/* width: 100%; */
-	/* height: 100%; */
+a.hwkt.floatButton{
+	text-decoration: none;
+	width: 50%;
+	height: 12%;
 	color: white;
-	/* background-color: #6a8; */
-	/* border: 2px solid #8a8; */
+	background-color: #6a8;
+	border: 2px solid #8a8;
 	border-radius: 50px;
 	
 	text-align: center;
@@ -154,7 +162,7 @@ window.onresize = function(){
 		</div>
 		
 		<h1 id="h1" class="ThreeD kt">五子棋</h1>
-		<div class="button_su">
+		<!-- <div class="button_su">
 			<span class="su_button_circle"></span>
 			<a href="javascript:location.href='./two.html';" title="点击进入双人对战" class="button_su_inner">
 				<span class="button_text_container hwkt">
@@ -185,27 +193,31 @@ window.onresize = function(){
 					登录/联机
 				</span>
 			</a>
-		</div>
-		<!-- <button
-			onclick="location.href='./two.html';"
+		</div> -->
+		<a
+			href="./two.html"
+			class="hwkt floatButton"
 			title="点击进入双人对战">
 			双人对战
-		</button>
-		<button
-			onclick="location.href='./one1.html';"
+		</a>
+		<a
+			href="./one1.html"
+			class="hwkt floatButton"
 			title="点击进入人机对战（算法1）">
 			人机对战（简单）
-		</button>
-		<button
-			onclick="location.href='./one2.html';"
+		</a>
+		<a
+			href="./one2.html"
+			class="hwkt floatButton"
 			title="点击进入人机对战（算法2）">
 			人机对战（中级）
-		</button>
-		<button
-			onclick="location.href='./sign.html';"
+		</a>
+		<a
+			href="./sign.html"
+			class="hwkt floatButton"
 			title="点击进入联机对战">
 			登录/联机
-		</button> -->
+		</a>
 		
 		<noscript style="z-index: 1; position: absolute; width: 100%; height: 100px; left: 0px; top: 0px; background-color: #000000; color: #FFFFFF;"><h1>错误！你的浏览器不支持JavaScript，无法运行《五子棋》！</h1></noscript>
 		
