--- a/two.html
+++ b/two.html
@@ -13,7 +13,7 @@
 		
 		<script src="./js/jq.js" type="text/javascript"></script>
 		<script>
-		if (require)
+		if (typeof(require) != "undefined")
 			window.$ = window.jQuery = require("./js/jq");
 		</script>
 		
@@ -98,13 +98,13 @@ h1{
 			<button onclick="init();">重来</button> -->
 		</div>
 			
-		<h1 id="h1" class="title kt">五子棋-双人对战z</h1>
-		<br/><b id="message" style="position:absolute;top:190px;">下棋方：黑棋</b>
+		<h1 id="h1" class="title kt">五子棋-双人对战</h1>
+		<br/><b id="message" style="position:absolute;top:190px;" class="fzybxskt">下棋方：黑棋</b>
 		<br>
-		<canvas id="qp" width="500" height="500" style="border:1px solid black;position:absolute;left:0px;top:216px;">错误！你的浏览器不支持Canvas，无法运行《五子棋》！</canvas>
-		<b style="position: absolute; top: 720px; margin-bottom: 20px;">步数：<span id="length">0</span></b>
+		<canvas id="qp" width="500" height="500" style="border:1px solid black;position:absolute;left:0px;top:216px;" class="fzybxskt">错误！你的浏览器不支持Canvas，无法运行《五子棋》！</canvas>
+		<b style="position: absolute; top: 720px; margin-bottom: 20px;" class="fzybxskt">步数：<span id="length">0</span></b>
 		
-		<noscript style="z-index: 1; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; background-color: #000000; color: #FFFFFF;"><h1>错误！你的浏览器不支持JavaScript，无法运行《五子棋》！</h1></noscript>
+		<noscript class="fzybxskt"><h1>错误！你的浏览器不支持JavaScript，无法运行《五子棋》！</h1></noscript>
 
 <script>
 var scale = 1,
@@ -202,7 +202,16 @@ function init(){
 	over = false;
 }
 
+document.onmousedown = function (e){
+	var list = document.getElementsByClassName("test");
+	for (var i=0;i<list.length;i++){
+		list[i].parentElement.removeChild(list[i]);
+	}
+}
 document.getElementById("qp").onmousedown = function (e){
+	e.stopPropagation(); //停止向上冒泡(W3C)
+	e.cancelBubble = true //停止向上冒泡(IE)
+	
 	var x=Math.round((e.pageX-position.left-24.6*scale)/(25*scale));
 	var y=Math.round((e.pageY-position.top-24.6*scale)/(25*scale));
 	// var x=Math.round((e.pageX-position.left-28.5)/24.722);
@@ -227,7 +236,9 @@ document.getElementById("qp").onmousedown = function (e){
 			test.style.top = y*(24.6*scale)+35.5/2*scale+position.top+"px";
 			test.style.border = "3px ridge #8af";
 			test.style.borderRadius = "50%";
-			test.onclick = function (){
+			test.onmousedown = function (e){
+				e.stopPropagation(); //停止向上冒泡(W3C)
+				e.cancelBubble = true //停止向上冒泡(IE)
 				click(Number(this["data-x"]), Number(this["data-y"]));
 				this.parentElement.removeChild(this);
 			}
