--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		
 		<script src="./js/jq.js" type="text/javascript"></script>
 		<script>
-		if (require)
+		if (typeof(require) != "undefined")
 			window.$ = window.jQuery = require("./js/jq");
 		</script>
 		
@@ -144,6 +144,17 @@ a.hwkt.floatButton{
 img{
 	border-radius: 50%;
 }
+noscript{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0px;
+	top: 0px;
+	margin: 0;
+	z-index: 666666;
+	background-color: #000000;
+	color: #FFFFFF;
+}
 </style>
 		
 	</head>
@@ -219,7 +230,7 @@ window.onresize = function(){
 			登录/联机
 		</a>
 		
-		<noscript style="z-index: 1; position: absolute; width: 100%; height: 100px; left: 0px; top: 0px; background-color: #000000; color: #FFFFFF;"><h1>错误！你的浏览器不支持JavaScript，无法运行《五子棋》！</h1></noscript>
+		<noscript class="fzybxskt"><h1>错误！你的浏览器不支持JavaScript，无法运行《五子棋》！</h1></noscript>
 		
 		
 <script>
@@ -253,7 +264,7 @@ window.onresize = function(){
 }
 a=new Box(undefined, undefined, "title", "name:<input value='123456'/>", [
 	{
-		innerHTML:"ok",
+		innerHTML:"关闭",
 		onclick: function(){
 			alert();
 			a.close();
